common frontend for web/ and chrome extension

--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -3,9 +3,6 @@
     "name": "WhisperLiveKit Tab Capture",
     "version": "1.0",
     "description": "Capture and transcribe audio from browser tabs using WhisperLiveKit.",
-    "background": {
-        "service_worker": "background.js"
-    },
     "icons": {
         "16": "icons/icon16.png",
         "32": "icons/icon32.png",
@@ -14,7 +11,7 @@
     },
     "action": {
         "default_title": "WhisperLiveKit Tab Capture",
-        "default_popup": "popup.html"
+        "default_popup": "live_transcription.html"
     },
     "permissions": [
         "scripting",
@@ -22,16 +19,5 @@
         "offscreen",
         "activeTab",
         "storage"
-    ],
-    "web_accessible_resources": [
-        {
-            "resources": [
-                "requestPermissions.html",
-                "requestPermissions.js"
-            ],
-            "matches": [
-                "<all_urls>"
-            ]
-        }
     ]
 }
